# vk.cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml
vkc/console/: __init__.py
