[tool.poetry]
name = "vk.cli"
version = "0.1.0"
description = ""
authors = ["yilbegan <w2v@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
cleo = "^0.7.6"

[tool.poetry.dev-dependencies]
pre-commit = "^1.20"
pytest = "^5.2"
black = "^18.3-alpha.0"

[tool.black]
line-length = 79
target-version = ["py36", "py37"]

[tool.poetry.scripts]
vkc = "vkc.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
